[package]
name = "egui_clip_textedit"
version = "0.1.2"
edition = "2021"
authors = ["Rui Kobayashi <roboroborx782@gmail.com>"]
description = "Text editor for text data with a large number of lines."
homepage = "https://github.com/KobayashiRui/egui_clip_textedit"
repository = "https://github.com/KobayashiRui/egui_clip_textedit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
eframe = {version = "0.21.0", default-features = false, features = ["accesskit", "default_fonts", "wgpu"]}
tracing-subscriber = "0.3"
bytemuck = { version = "1.7.1", optional = true }